--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon"
+        href="https://cdn.discordapp.com/attachments/786381921890467841/1012390503280545942/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon"
+        href="https://cdn.discordapp.com/attachments/786381921890467841/1012390503280545942/favicon.ico">
     <title>De Real Rats (SOLO PC)</title>
+
 </head>
 
 <body>
@@ -18,7 +23,9 @@
 
 
     <div class="discord">
-        <a href="https://discord.gg/tSN6ggUU2D"><img style="height: 30px;" src="assets/discrd.png" alt=""></a>
+        <a href="https://discord.gg/tSN6ggUU2D"><img style="height: 30px;"
+                src="https://cdn.discordapp.com/attachments/786381921890467841/1012390324825501716/discrd.png"
+                alt=""></a>
     </div>
 
     <span class="aternos">
